# Jarvis-test

./: .replit  README (1).txt  README.md  app (1).py  app.py  backup_direct_download (1).html  backup_download.html  backup_service (1).py  backup_service.py  base (1).html  checklist_routes.py  completed (1).html  contract_templates (1).py  contract_templates.py  contract_templates_converted.js  copy_templates.sh  create (1) (1).html  create (10).html  create (11).html  create (2) (1).html  create (4) (1).html  create (6) (1).html  create (7) (1).html  create (9) (1).html  database_data (1).json  edit (3) (1).html  edit (4) (1).html  edit (5).html  edit (6).html  email_service (1).py  email_service.py  forms (1).py  forms.py  futuristic-effects (1).js  index (1) (1).html  index (10) (1).html  index (11) (1).html  index (12).html  index (13).html  index (14).html  (+35 more)
static/css/: style.css  styles.css
static/js/: scripts.js
templates/: base.html  dashboard.html
templates/checklist/: edit_item.html  index.html
templates/contractors/: create.html  edit.html
templates/contracts/: select_customer.html  sign.html  view.html
templates/customers/: create.html  edit.html  index.html
templates/emails/: create.html  index.html
templates/invoices/: create.html  index.html  view.html
templates/root_templates/: backup_download.html  contract_view.html  contractor_list.html  customer_view.html  dashboard.html
